Update Call Function

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
     <script>
         // --- PUT YOUR KEYS HERE ---
-        const PUBLIC_KEY = "YOUR_PUBLIC_KEY_HERE"; 
-        const ASSISTANT_ID = "YOUR_ASSISTANT_ID_HERE"; 
+        const PUBLIC_KEY = "59b67b86-28d8-497d-9d84-99b5683389fc"; 
+        const ASSISTANT_ID = "23e3cfd4-e35e-4c51-8d0a-4499c5b9c78b"; 
 
         const vapi = new Vapi(PUBLIC_KEY);
         const btn = document.getElementById("mic-btn");
